# urbancli

./: LICENSE  README.md  install.sh  pyproject.toml  shell.nix  urban  urbancli  urbancli.sh
app/: main.py  parser.py
app/dictdisplay/: __init__.py  colors.py
