[tool.poetry]
name = "urbancli"
version = "0.1.0"
description = "A Command Line Interface for urbandictionary.com"
authors = ["LJC <leoncotten6@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-urbandict = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
